styles: fix heading-3 letter spacing

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -133,7 +133,7 @@ body {
 .heading-3 {
   font-size: 3.5rem;
   line-height: 1.3;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.04em;
 }
 
 .heading-4 {
@@ -279,7 +279,6 @@ body {
 
 .about__heading {
   color: var(--color-grey-dark-1);
-  letter-spacing: 1px;
   width: 31rem;
 }
 
@@ -396,8 +395,7 @@ body {
 }
 
 .donate__heading {
-  width: 30rem;
-  letter-spacing: 0.1em;
+  width: 28rem;
 }
 
 .donate__credit-card:link,
